k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cvmp
  labels:
    name: cvmp
    environment: production
